--- a/src/css/style.css
+++ b/src/css/style.css
@@ -81,6 +81,8 @@ body {
     width: 100vw;
     height: 100vh;
     overflow: hidden;
+    display: flex;
+    justify-content: center;
 }
 
 .fundo-video .video {
