--- a/src/css/style.css
+++ b/src/css/style.css
@@ -64,6 +64,7 @@ body {
     padding: 15px;
     font-size: 18px;
     font-weight: bold;
+    margin-top: 30px;
     cursor: pointer;
     border: none;
     text-transform: uppercase;
